--- a/server/docker-compose.yaml
+++ b/server/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     volumes:
       - redis_data:/data
   stock-ticker:
-    image: stock-ticker
+    image: adityachauhan25/stock-ticker:latest
     container_name: stock-ticker
     ports:
       - "8080:8080"
