--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,13 +40,18 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             mkdir -p stock-ticker/server
-            echo "STOCK_API_KEY=${{ secrets.STOCK_API_KEY }}" > stock-ticker/server/.env
-            echo "STOCK_API_URL=${{ secrets.STOCK_API_URL }}" > stock-ticker/server/.env
+            
+            if [ ! -f "stock-ticker/server/.env" ] || ! grep -q "STOCK_API_KEY=" stock-ticker/server/.env; then
+              echo "STOCK_API_KEY=${{ secrets.STOCK_API_KEY }}" > stock-ticker/server/.env
+            fi
+      
+            if [ ! -f "stock-ticker/server/.env" ] || ! grep -q "STOCK_API_URL=" stock-ticker/server/.env; then
+              echo "STOCK_API_URL=${{ secrets.STOCK_API_URL }}" >> stock-ticker/server/.env
+            fi
 
             cat stock-ticker/server/.env
 
             cd stock-ticker/server
-            git pull origin main
             sudo docker-compose down
             sudo docker-compose pull
             sudo docker-compose up -d --build
